<resources>
    <string name="app_name">HarvardMuseums</string>
    <string name="titulo">Museu ABC</string>
    <string name="subtitulo">Museu trabalho
    </string>

    <string name="Pesquisar">Pesquisar</string>
    <string name="banco">Vizualizar</string>
    <string name="pagina">Escolha a página:</string>

    <string name="artistas">Artistas</string>
    <string name="exposicao">Exposição</string>

    <string name="nomeart">-Nome:</string>
    <string name="genero">-Genero:</string>
    <string name="localNasc">-Local de Nascimento:</string>
    <string name="localMorte">-Local da Morte:</string>
    <string name="AnoNascimento">-Ano de Nascimento:</string>
    <string name="cultura">-Cultura:</string>
    <string name="desc">https://harvardartmuseums.org/</string>

    <string name="DIExpo">-Data Inicial:</string>
    <string name="DFExpo">-Data Final:</string>
    <string name="DescExpo">-Descrição:</string>
    <string name="TempExpo">-Ordem Temporal:</string>

    <string name="local">Proximo de mim</string>
    <string name="suaLocal">Sua localização é</string>
    <string name="carregar">Carregar localização</string>
    <string name="buscarProx">Buscar museus próximos</string>

    <string name="address_text">"%1$s"</string>
    <string name="no_address_found">Endereço não disponível</string>
    <string name="loading">Por favor Aguarde enquanto fazemos a busca</string>
    <string name="appwidget_text">HarvardMuseums</string>
    <string name="add_widget">Add widget</string>
    <string name="updatewid">Atualizar</string>

    <string name="temquecarregar">Clique em Carregar localização</string>


    <string name="date_count_format">%1$d @%2$s</string>

    <string name="Museu">Museus</string>
    <string name="localização">Localização</string>

    <string name="Favoritos">Favoritos</string>

    <string name="Password">Senha</string>
    <string name="confirmar">Confirmar</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>

    <string name="login"><u>Login</u></string>

    <string name="cliqueaqui">Clique Aqui</string>
    <string name="FazerRegistro">Ainda não tem cadastro?</string>
    <string name="cadastro">Cadastro</string>


</resources>