<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000415"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/imagem2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:hint="@string/titulo"
            android:textColorHint="@color/black"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/subtitulo"
            android:textColorHint="@color/black"
            android:textSize="30sp" />


    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_expo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:onClick="Expo"
        android:hint="@string/exposicao"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btn_artistas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:onClick="Art"
        android:hint="@string/artistas"
        app:backgroundTint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/btn_museus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:onClick="Art"
        android:hint="@string/Museu"
        app:backgroundTint="@android:color/holo_orange_light" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:hint="@string/desc"
        android:textColorHint="@color/white"
        android:textSize="17sp" />

</LinearLayout>