<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000415"
    android:orientation="vertical"
    tools:context=".Exposicao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/exposicao">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:hint="@string/exposicao"
            android:textColorHint="?android:attr/colorPressedHighlight"
            android:textSize="50sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:layout_marginLeft="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/tituloExpo"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/tituloesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/DIExpo"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/DIesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/textview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/DFExpo"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/DFesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/DescExpo"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/descesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/TempExpo"
                android:textColorHint="@color/cardview_light_background"
                android:textSize="21sp" />


            <TextView
                android:id="@+id/tempesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:layout_marginLeft="10dp"
                android:textSize="21sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>